--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.12.1",
     "express": "^4.12.2",
     "react": "^0.13.1",
+    "react-tools": "^0.13.2",
     "showdown": "^0.4.0",
     "url": "^0.10.3"
   },
